--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "expo": "^38.0.8",
+    "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "expo-ui-kit": "^0.1.6",
     "react": "~16.11.0",
