--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "expo-ui-kit": "^0.1.0",
+    "lottie-react-native": "~2.6.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-dotenv": "^2.3.0",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^4.0.1",
